--- a/.properties
+++ b/.properties
@@ -1,5 +1,5 @@
 user=root
 password=
-connection=jdbc:mysql://192.168.34.189:3306/ahorcado
+connection=jdbc:mysql://localhost:3306/ahorcado
 
 keyPassword=Ahorca.do
