--- a/.properties
+++ b/.properties
@@ -5,3 +5,5 @@ connection=jdbc:mysql://localhost:3306/ahorcado
 keyPath=/key/key.jks
 keyPassword=Ahorca.do
 port=65000
+
+words=/data/palabras-ahorcado.json
