Fix: SSL connection correction, resource loading, and game mode implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 .kotlin
-.properties
+src/main/resources/.properties
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
